# mysql-mcp-server

./: Dockerfile  README.md  docker-compose.yml  mysql_server.py  pyproject.toml
.github/workflows/: docker.yml  security.yml  stale.yml
